[FR] Template Selections - Bookmarks #152 add styling, fixed bug ie page body no scrollbar, fixed bug dynamic selection objectType not disabled

--- a/src/app/pages/apps/components/template-selections/components/list-views/scrollable-list.component.scss
+++ b/src/app/pages/apps/components/template-selections/components/list-views/scrollable-list.component.scss
@@ -1,8 +1,12 @@
 :host {
 
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
   .list-container {
     width: 100%;
-    height: 150px;
+    flex: 1;
   }
 
   .list-group-item {
